--- a/index.html
+++ b/index.html
@@ -6,8 +6,28 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>developer portfolio</title>
     <link rel="stylesheet" href="styles.css">
-</head>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans&family=Roboto:wght@500&display=swap" rel="stylesheet">
 <body>
-    
+    <header>
+<nav>
+    <h2 class="nav-title">Ma<span class="text-primary-color">r</span>y</h2>
+    <ul>
+        <li>Portfolio</li>
+        <li>Blogs</li>
+        <li><button>Hire</button></li>
+    </ul>
+</nav>
+    </header>
+
+    <main>
+
+    </main>
+
+    <footer>
+
+    </footer>
 </body>
 </html>
