--- a/index.html
+++ b/index.html
@@ -17,7 +17,9 @@
     <ul>
         <li>Portfolio</li>
         <li>Blogs</li>
-        <li><button>Hire</button></li>
+        <li>
+            <button class="btn-primary">Hire</button>
+        </li>
     </ul>
 </nav>
     </header>
