--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans&family=Roboto:wght@500&display=swap" rel="stylesheet">
 <body>
-    <header>
+    <header class="header">
 <nav>
     <h2 class="nav-title">Ma<span class="text-primary-color">r</span>y</h2>
     <ul>
@@ -22,6 +22,17 @@
         </li>
     </ul>
 </nav>
+
+<div class="banner">
+    <div>
+        <h3 class="banner-subtitle">Hi, I am</h3>
+        <h1 class="banner-title">Mary Hardy</h1>
+        <p class="banner-description">Shot what able cold new see hold.Friendly as an betrayed formerly he. Morning because as to society behaved moments.</p>
+        <button class="btn-primary">Download CV</button>
+    </div>
+
+    <img src="images/hardy.png" alt="">
+</div>
     </header>
 
     <main>
