--- a/index.html
+++ b/index.html
@@ -36,6 +36,35 @@
     </header>
 
     <main>
+        <section class="about">
+            <h3 class="section-title">About Me</h3>
+            <p class="section-description">I, m a designer & developer with a passion for web design. I enjoy developing simple, clean  
+                 and slick websites that      
+            provide real value to the end user. Thousands of clients have procured exceptional resulfs while working with me. 
+            Delivering work within time and budget which meets clients requirements in our mata.</p>
+
+            <div class="about-info-container">
+
+              <div class="aboout-info">
+                <p class="about-title">Name:</p>
+                <p class="about-description">Mary Hardy</p>
+              </div>
+              <div class="aboout-info">
+                <p class="about-title">E-mail:</p>
+                <p class="about-description">info@gmail.com</p>
+              </div>
+              <div class="aboout-info">
+                <p class="about-title">Date of Birth:</p>
+                <p class="about-description">10 Novermber 1999</p>
+              </div>
+              <div class="aboout-info">
+                <p class="about-title">From:</p>
+                <p class="about-description">Los Angeles, USA</p>
+              </div>
+               </div>
+            
+            </div>
+        </section>
 
     </main>
 
