--- a/index.html
+++ b/index.html
@@ -66,6 +66,33 @@
             </div>
         </section>
 
+
+        <section class="what-i-do">
+            <h3 class="what-i-do-title">What I Do</h3>
+            <div class="skill-container">
+                <div class="skill">
+                    <img src="" alt="">
+                    <p class="skill-title"></p>
+                    <p class="skill-descripition">Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis nemo ipsam eveniet accusamus nobis eos.</p>
+                </div>
+                <div class="skill">
+                    <img src="" alt="">
+                    <p class="skill-title"></p>
+                    <p class="skill-descripition">Nam totam, repellat quaerat maiores perferendis dolores est saepe dolor minus quo possimus libero sunt.</p>
+                </div>
+                <div class="skill">
+                    <img src="" alt="">
+                    <p class="skill-title"></p>
+                    <p class="skill-descripition">Aliquid ipsum autem, animi eius pariatur doloribus magnam aut libero, suscipit earum, fuga blanditiis quia.</p>
+                </div>
+                <div class="skill">
+                    <img src="" alt="">
+                    <p class="skill-title"></p>
+                    <p class="skill-descripition">Quibusdam ipsa odio nostrum soluta quis illo incidunt magnam asperiores, dignissimos suscipit aperiam dolores eos?</p>
+                </div>
+            </div>
+        </section>
+
     </main>
 
     <footer>
