--- a/index.html
+++ b/index.html
@@ -68,31 +68,104 @@
 
 
         <section class="what-i-do">
-            <h3 class="what-i-do-title">What I Do</h3>
+            <h3 class="section-title">What I Do</h3>
+            <p class="section-description">I have more than 10 years experience building software for clients all over the world.     
+                  Below is a quick overview of my main technical skill sets and technologies i use. Want to find out more about my 
+                  experience? Check out my online resume and project portfolio.</p>
             <div class="skill-container">
                 <div class="skill">
-                    <img src="" alt="">
-                    <p class="skill-title"></p>
-                    <p class="skill-descripition">Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis nemo ipsam eveniet accusamus nobis eos.</p>
+                    <img src="images/icons/js.png" alt="">
+                    <p class="skill-title">Vanilla Javascript</p>
+                    <p class="skill-descripition">List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
                 </div>
                 <div class="skill">
-                    <img src="" alt="">
-                    <p class="skill-title"></p>
-                    <p class="skill-descripition">Nam totam, repellat quaerat maiores perferendis dolores est saepe dolor minus quo possimus libero sunt.</p>
+                    <img src="images/icons/react.png" alt="">
+                    <p class="skill-title">React</p>
+                    <p class="skill-descripition">List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
                 </div>
                 <div class="skill">
-                    <img src="" alt="">
-                    <p class="skill-title"></p>
-                    <p class="skill-descripition">Aliquid ipsum autem, animi eius pariatur doloribus magnam aut libero, suscipit earum, fuga blanditiis quia.</p>
+                    <img src="images/icons/nodejs.png" alt="">
+                    <p class="skill-title">Node.JS</p>
+                    <p class="skill-descripition">List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
                 </div>
                 <div class="skill">
-                    <img src="" alt="">
-                    <p class="skill-title"></p>
-                    <p class="skill-descripition">Quibusdam ipsa odio nostrum soluta quis illo incidunt magnam asperiores, dignissimos suscipit aperiam dolores eos?</p>
+                    <img src="images/icons/mongo.png" alt="">
+                    <p class="skill-title">MongoDB</p>
+                    <p class="skill-descripition">List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
                 </div>
             </div>
         </section>
+        
+        <section class="resume">
+            <h3 class="section-title">A Summary of My Resume</h3>
 
+            <div class="resume-content">
+                <div>
+                    <h3 class="resume-title">My Education</h3>
+                    <div class="resume-item">
+                        <h5 class="title">Master in Computer Engineering</h5>
+                        <h6 class="resume-subtitle">Harvard University / 2015 - 2017</h6>
+                        <p class="resume-description">List skill/technologies here. You can change the icon above 
+                            to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                    </div>
+                    <hr>
+
+                    <div class="resume-item">
+                        <h5 class="title">Master in Computer Engineering</h5>
+                        <h6 class="resume-subtitle">Harvard University / 2015 - 2017</h6>
+                        <p class="resume-description">List skill/technologies here. You can change the icon above 
+                            to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                    </div>
+                    <hr>
+
+                    <div class="resume-item">
+                        <h5 class="title">Master in Computer Engineering</h5>
+                        <h6 class="resume-subtitle">Harvard University / 2015 - 2017</h6>
+                        <p class="resume-description">List skill/technologies here. You can change the icon above 
+                            to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                    </div>
+                    <hr>
+
+                </div>
+
+                <div>
+
+                    <h3 class="resume-title">My Experience</h3>
+
+                    <div class="resume-item">
+                        <h5 class="title">Master in Computer Engineering</h5>
+                        <h6 class="resume-subtitle">Harvard University / 2015 - 2017</h6>
+                        <p class="resume-description">List skill/technologies here. You can change the icon above 
+                            to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                    </div>
+                    <hr>
+
+                    <div class="resume-item">
+                        <h5 class="title">Master in Computer Engineering</h5>
+                        <h6 class="resume-subtitle">Harvard University / 2015 - 2017</h6>
+                        <p class="resume-description">List skill/technologies here. You can change the icon above 
+                            to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                    </div>
+                    <hr>
+
+                    <div class="resume-item">
+                        <h5 class="title">Master in Computer Engineering</h5>
+                        <h6 class="resume-subtitle">Harvard University / 2015 - 2017</h6>
+                        <p class="resume-description">List skill/technologies here. You can change the icon above 
+                            to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                    </div>
+                    <hr>
+                    
+
+                </div>
+
+            </div>
+
+            <div class="resume-btn">
+                <button class="btn-primary">Download CV</button>
+            </div>
+
+        </section>
     </main>
 
     <footer>
