--- a/index.html
+++ b/index.html
@@ -166,6 +166,41 @@
             </div>
 
         </section>
+
+        <section class="contact-section">
+
+            <div>
+                <h3 class="section-title">Lets Connect</h3>
+                <p class="contact-description">Please fill out the form on this section to contact with me or call between 9:00 A.M and 8.00 P.M ET, Monday through 
+                     Friday.</p>
+
+                <a href="">
+                    <img src="images/icons/facebook.png" alt="">
+                </a>
+                <a href="">
+                    <img src="images/icons/insta.png" alt="">
+                </a>
+                <a href="">
+                    <img src="images/icons/twitter.png" alt="">
+                </a>
+
+                
+
+            </div>
+
+            <div>
+                <h3 class="section-title">Lets Message me</h3>
+
+                <form action="">
+                    <input type="text" placeholder="Your Name">
+                    <input type="email" placeholder="Your E-mail">
+                    <textarea name="" id="" cols="30" rows="10" placeholder="Message"></textarea>
+                    <input type="submit" name="" class="btn-primary">
+                </form>
+
+            </div>
+
+        </section>
     </main>
 
     <footer>
