--- a/index.html
+++ b/index.html
@@ -76,22 +76,26 @@
                 <div class="skill">
                     <img src="images/icons/js.png" alt="">
                     <p class="skill-title">Vanilla Javascript</p>
-                    <p class="skill-descripition">List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                    <p class="skill-descripition">List skill/technologies here. You can change the icon above to any of the 1500+ 
+                         FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
                 </div>
                 <div class="skill">
                     <img src="images/icons/react.png" alt="">
                     <p class="skill-title">React</p>
-                    <p class="skill-descripition">List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                    <p class="skill-descripition">List skill/technologies here. You can change the icon above to any of the 1500+ 
+                         FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
                 </div>
                 <div class="skill">
                     <img src="images/icons/nodejs.png" alt="">
                     <p class="skill-title">Node.JS</p>
-                    <p class="skill-descripition">List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                    <p class="skill-descripition">List skill/technologies here. You can change the icon above to any of the 1500+ 
+                         FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
                 </div>
                 <div class="skill">
                     <img src="images/icons/mongo.png" alt="">
                     <p class="skill-title">MongoDB</p>
-                    <p class="skill-descripition">List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                    <p class="skill-descripition">List skill/technologies here. You can change the icon above to any of the 1500+ 
+                         FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
                 </div>
             </div>
         </section>
@@ -156,7 +160,6 @@
                     </div>
                     <hr>
                     
-
                 </div>
 
             </div>
@@ -183,8 +186,6 @@
                 <a href="">
                     <img src="images/icons/twitter.png" alt="">
                 </a>
-
-                
 
             </div>
 
